@@ -78,3 +78,4 @@ Changes in version 1.7.x
 Changes in version 1.9.x
 + loadFromMetaphlan: Bugfix, not all files include ID column.
 + Added loadFromHumann
++ calculateDMM: deprecated/updated outdated functions
